--- a/style.css
+++ b/style.css
@@ -312,7 +312,73 @@ video {
   cursor: pointer;
 }
 
-.fifth-container {
+section.fifth {
+  padding: 3rem 5rem;
+}
+
+.fifth-container1 {
   display: flex;
   flex-direction: column;
+}
+
+.fifth-container_h1 {
+  font-weight: 600;
+  font-size: 65px;
+  line-height: 54px;
+  letter-spacing: -0.02em;
+  color: var(--darker-gray);
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.fifth-container_p {
+  width: 513px;
+  font-size: 22px;
+  line-height: 30px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.fifth-container_flex {
+  display: flex;
+  margin-top: 70px;
+  justify-content: space-between;
+}
+
+.fifth-container_flex1,
+.fifth-container_flex2,
+.fifth-container_flex3 {
+  width: 370px;
+  height: 425px;
+  padding: 50px 60px;
+  background: #eae4dc;
+}
+
+.fifth-container_flex img {
+  margin-bottom: 24px;
+}
+
+.fifth-container_flex h1 {
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 44px;
+  letter-spacing: -0.02em;
+  margin-bottom: 10px;
+}
+
+.fifth-container_flex p {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 30px;
+  color: #6e6e6e;
+  margin-bottom: 30px;
+}
+
+.fifth-container_flex a {
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 31px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  color: var(--darker-gray);
 }
